# BCPNN-for-NEST222-MPI

./: README.md  README.txt  README.txt~  compile-module.sh  compile-module_beskow.sh~  error_file.e  jobfile_test_bcpnn.sh  jobfile_test_bcpnn.sh~  test_beskow.py  test_installation.py
bootstrap-module-100725/: Makefile.am  Makefile.in  aclocal.m4  aeif_cond_exp_multisynapse.cpp  bcpnn_connection.cpp  bcpnn_connection.h  configure  configure.ac  pt_module.cpp  pt_module.cpp~  pt_module.h  pt_module_config.h.in  pt_module_names.cpp
bootstrap-module-100725/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bootstrap-module-100725/libltdl/: ltdl.c
bootstrap-module-100725/sli/: pt_module.sli
build-module-100725/: Makefile  config.status  libpt_module.la  libpt_module_la-aeif_cond_exp_multisynapse.lo  libpt_module_la-bcpnn_connection.lo  libpt_module_la-iaf_cond_alpha_bias.lo  libpt_module_la-iaf_cond_exp_bias.lo  libpt_module_la-pt_module.lo  libtool  pt_module.la  pt_module_config.h  pt_module_la-aeif_cond_exp_multisynapse.lo  pt_module_la-bcpnn_connection.lo  pt_module_la-iaf_cond_alpha_bias.lo  pt_module_la-iaf_cond_exp_bias.lo  pt_module_la-pt_module.lo  stamp-h1
build-module-100725/libltdl/: Makefile  config.h  config.status  libtool
lib/nest/: libpt_module.la  pt_module.la  pt_module.so.0.0.0
module-100725/: Makefile.am~  aeif_cond_exp_multisynapse.h  iaf_cond_exp_bias.cpp  iaf_cond_exp_bias.h  pt_module_names.h
module-100725/sli/: test.sli
